lbdb (0.35.2) unstable; urgency=low

  * Remove duplicate "See also: mutt" from lbdbq.man (Closes: #441588).
  * Update configure using autconf 2.61.
  * Apply charset conversation patch by Peter Colberg based on code by
    Tobias Schlemmer (Closes: #355678).
  * Remove duplicate declaration of $ignorant.

 -- Roland Rosenfeld <roland@debian.org>  Sat, 14 Jun 2008 12:11:27 +0200

lbdb (0.35.1+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix m_evolution to work also with recent Evolution which exports cards
    with different FN/EMAIL fields ordering. Thanks to Brian M. Carlson for
    the patch (Closes: #462573).

 -- Stefano Zacchiroli <zack@debian.org>  Sat, 12 Apr 2008 17:44:04 +0200

lbdb (0.35.1) unstable; urgency=low

  * New mail address of Brian Salter-Duke <b_duke@bigpond.net.au>.
  * Get rid of the SSL code from the previous version and add a comment to
    the man page instead how you can use SSL (and also different ports)
    using ldap[s]://foo[:port] URLs (Closes: #426316).

 -- Roland Rosenfeld <roland@debian.org>  Mon, 28 May 2007 11:03:22 +0200

lbdb (0.35) unstable; urgency=low

  * activate flavortest in emacen-install to avoid warnings and slow
    upgrades (Closes: #399775).
  * Avoid loosing the first entry from VCF file.  Thanks to
    Tino Keitel <tino.keitel+debbugs@tikei.de> for providing a patch 
    (Closes: #405312).
  * Remove vcquery in distclean target (Closes: #405321).
  * Use defaults for $KEEP_DUPES and $SORT_OUTPUT in lbdbq
    (Closes: #422214).
  * Update mutt_ldap_query.pl from
    http://www.courville.org/mediawiki/index.php/Mutt_ldap_query which
    adds SSL support.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 20 May 2007 15:10:26 +0200

lbdb (0.34) unstable; urgency=medium

  * vcquery: avoid free() on unallocated memory if fullname is not set.
    Thanks to Gregor Jasny <gjasny@web.de> for finding and providing a
    patch (Closes: #395421).